src/objects/FieloPLT__Level__c.object
<CustomObject>
    <description>Levels rank Members by including them into different groups (e.g. Gold, Silver, Platinum).</description>
    <fields>
        <fullName>FieloPLT__Description__c</fullName>
        <description>Level detail.</description>
        <inlineHelpText>Enter the Level description.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Image__c</fullName>
        <description>Level image (upload an image or enter URL).</description>
        <inlineHelpText>Choose a Level image (upload an image or enter URL).</inlineHelpText>
        <label>Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When ticked, this Level can be applied to Members.</description>
        <inlineHelpText>When ticked, this Level can be applied to Members.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Order__c</fullName>
        <description>Levels hierarchical order.</description>
        <inlineHelpText>Levels hierarchical order.</inlineHelpText>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Program where the Level belongs to.</description>
        <inlineHelpText>Choose the Program which the Level belongs to.</inlineHelpText>
        <label>Program</label>
        <referenceTo>FieloPLT__Program__c</referenceTo>
        <relationshipLabel>Levels</relationshipLabel>
        <relationshipName>Levels</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Level</label>
    <listViews>
        <fullName>FieloPLT__All</fullName>
        <columns>NAME</columns>
        <columns>FieloPLT__Program__c</columns>
        <columns>FieloPLT__Description__c</columns>
        <columns>FieloPLT__IsActive__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Levels</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Level Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Levels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloPLT__ModifyProgram</fullName>
        <active>true</active>
        <description>The related Program cannot be modified.</description>
        <errorConditionFormula>ISCHANGED(FieloPLT__Program__c) &amp;&amp; NOT(ISBLANK(PRIORVALUE(FieloPLT__Program__c)))</errorConditionFormula>
        <errorDisplayField>FieloPLT__Program__c</errorDisplayField>
        <errorMessage>The related Program cannot be modified.</errorMessage>
    </validationRules>
</CustomObject>